# pmakefile

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
example/: ffi.h  make
examples/: ffi.c  make
makefilepy/: __init__.py
pmakefile/: __init__.py
